@@ -14,13 +14,3 @@
 * Convert the driver floppies to use FAT filesystem, not ext2, on i386.
   Makes it easier for third parties to throw additional udebs on.
 * Cache the upxed kernel, to avoid re-upxing it over and over.
-* The localudebs stuff is a hack, and would be better handled by using
-  apt-ftparchive to set up an apt repository based on files in localudebs,
-  and let apt know about it by adding that to sources.list.udeb. Then the
-  ugly caveat in README could be removed. In fact, this was done once (svn
-  r26866), but secure apt broke it by requring gpg signatures, which would
-  e very hard to automate for this.
-  An alternative for apt-ftparchive is to use dpkg-scanpackages:
-  dpkg-scanpackages -u localudebs /dev/null | gzip >localudebs/Packages.gz
-  The following line in sources.list.udeb will then work:
-  deb file:<full path to installer/build/> localudebs/
